@@ -1,6 +1,9 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
-* ZOOO. Added Z3950_record_dup. Removed Z3950_resultset_get.
+* ZOOM. Removed Z3950_connection_host. Use Z3950_connection_option_get
+with key="host" to get same result.
+
+* ZOOM. Added Z3950_record_dup and removed Z3950_resultset_get.
 Function Z3950_resultset_record(s) returns references to records
 "owned" by resultset. To become owner use Z3950_record_dup.
 
